[gd_scene load_steps=10 format=3 uid="uid://3rr86m2dkblj"]

[ext_resource type="Script" uid="uid://b21oxwnvk5k2q" path="res://menus/main_menu.gd" id="1_l3xge"]
[ext_resource type="FontFile" uid="uid://d32o0by52v0gf" path="res://UI and Sprites/fonts/Danger Zone Warning.ttf" id="2_hkbv3"]
[ext_resource type="Texture2D" uid="uid://cdybyfwuiir1x" path="res://textures/wood/old-wood-planks-128x128.png" id="3_2sn7i"]
[ext_resource type="Texture2D" uid="uid://ckidsojsmvaey" path="res://UI and Sprites/exit_sign.png" id="3_7t2j8"]
[ext_resource type="Texture2D" uid="uid://d0qpbr6dfbpcd" path="res://UI and Sprites/Signs-5679-256x180-120x84.jpg" id="4_bw4xm"]
[ext_resource type="Texture2D" uid="uid://hhjhflycqbnd" path="res://textures/metal_7765.jpg" id="5_7pej7"]
[ext_resource type="PackedScene" uid="uid://dd882ou6q52i3" path="res://controller_mouse.tscn" id="7_pwbes"]

[sub_resource type="LabelSettings" id="LabelSettings_s4a3p"]
font = ExtResource("2_hkbv3")
font_size = 32

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ytsfd"]
texture = ExtResource("3_2sn7i")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3xge")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -91.5
offset_right = 64.0
offset_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="driftmetal" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "DRIFTMETAL"
label_settings = SubResource("LabelSettings_s4a3p")
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = "I wanted to get a build out that I can iterate on, but as 
of now, I wouldnt recoment playing in its current state."

[node name="Start_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("4_bw4xm")
flat = true
icon_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = SubResource("StyleBoxTexture_ytsfd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ytsfd")
theme_override_styles/normal = SubResource("StyleBoxTexture_ytsfd")
text = "          +          "

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("3_7t2j8")
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 480.0
offset_bottom = 320.0
mouse_filter = 2
texture = ExtResource("5_7pej7")

[node name="controller_mouse" parent="." instance=ExtResource("7_pwbes")]

[connection signal="pressed" from="VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
